# spark-app

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.sh/: master.sh  submit.sh  worker.sh
notebooks/: test.ipynb
src/: sample_spark_code.py
