[tool.poetry]
name = "spark-app"
version = "0.1.0"
description = ""
authors = ["Eva Bronskaya <evabronskayaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.0.1"
pyspark = "^3.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
